DATAREST-93 - Removed Gradle wrapper script customizations.