@@ -79,7 +79,7 @@ configure(allprojects) {
   sourceSets.test.resources.srcDirs = ["src/test/resources", "src/test/java"]
 
   repositories {
-    maven { url "http://repo.springsource.org/libs-milestone" }
+    maven { url "http://repo.springsource.org/libs-snapshot" }
   }
 
   dependencies {
@@ -363,15 +363,4 @@ configure(rootProject) {
 task wrapper(type: Wrapper) {
   description = "Generates gradlew[.bat] scripts"
   gradleVersion = "1.10"
-
-  doLast() {
-    def gradleOpts = "-XX:MaxPermSize=1024m -Xmx1024m"
-    def gradleBatOpts = "$gradleOpts -XX:MaxHeapSize=256m"
-    File wrapperFile = file("gradlew")
-    wrapperFile.text = wrapperFile.text.replace("DEFAULT_JVM_OPTS=",
-                                                "GRADLE_OPTS=\"$gradleOpts \$GRADLE_OPTS\"\nDEFAULT_JVM_OPTS=")
-    File wrapperBatFile = file("gradlew.bat")
-    wrapperBatFile.text = wrapperBatFile.text.replace("set DEFAULT_JVM_OPTS=",
-                                                      "set GRADLE_OPTS=$gradleBatOpts %GRADLE_OPTS%\nset DEFAULT_JVM_OPTS=")
-  }
 }
